Make sure pictures do not stretch

--- a/assets/style.css
+++ b/assets/style.css
@@ -114,6 +114,8 @@ p {
     float: left;
     clear: right;
     width: 40px;
+    height: 40px;
+    object-fit: contain;
 }
 
 .more-information {
